--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -13,33 +13,33 @@
     text-align: center;
   }
 
-  .cards__container {    
+  .cards_container {    
     display: flex;
     flex-flow: column;
     align-items: center;
     max-width: 1120px;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     object-fit: contain;
   }
   
-  .cards__wrapper {
+  .cards_wrapper {
     position: relative;
     margin: 50px 0 45px;
   }
   
-  .cards__items {
+  .cards_items {
     margin-bottom: 24px;
   }
   
-  .cards__item {
+  .cards_item {
     display: flex;
     flex: 1;
     margin: 0 1rem;
     border-radius: 10px;
   }
   
-  .cards__item__link {
+  .cards_item_link {
     display: flex;
     flex-flow: column;
     width: 100%;
@@ -51,7 +51,7 @@
     text-decoration: none;
   }
   
-  .cards__item__pic-wrap {
+  .cards_item_pic-wrap {
     position: relative;
     width: 100%;
     padding-top: 67%;
@@ -63,7 +63,7 @@
     animation-duration: 2s;
   }
   
-  .cards__item__pic-wrap::after {
+  .cards_item_pic-wrap::after {
     content: attr(data-category);
     position: absolute;
     bottom: 0;
@@ -77,7 +77,7 @@
     box-sizing: border-box;
   }
   
-  .cards__item__img {
+  .cards_item_img {
     position: absolute;
     top: 0;
     right: 0;
@@ -92,34 +92,34 @@
     transition: all 0.2s linear;
   }
   
-  .cards__item__img:hover {
+  .cards_item_img:hover {
     transform: scale(1.1);
   }
   
-  .cards__item__info {
+  .cards_item_info {
     padding: 20px 30px 30px;
   }
   
-  .cards__item__text {
+  .cards_item_text {
     color: #252e48;
     font-size: 18px;
     line-height: 24px;
   }
   
   @media only screen and (min-width: 1200px) {
-    .content__blog__container {
+    .content_blog_container {
       width: 84%;
     }
   }
   
   @media only screen and (min-width: 1024px) {
-    .cards__items {
+    .cards_items {
       display: flex;
     }
   }
   
   @media only screen and (max-width: 1024px) {
-    .cards__item {
+    .cards_item {
       margin-bottom: 2rem;
     }
   }
