--- a/src/components/ContactMe.css
+++ b/src/components/ContactMe.css
@@ -6,7 +6,7 @@ video{
     z-index: -1;
 }
 
-.hero-container{
+.contact-container{
     height: 100vh;
     width: 100%;
     display: flex;
@@ -17,13 +17,13 @@ video{
     object-fit: contain;
 }
 
-.hero-container > h1 {
+.contact-container > h1 {
     color: white;
     font-size: 100px;
     margin-top: -100px;
 }
 
-.hero-container >p {
+.contact-container >p {
     margin-top: 8px;
     color: white;
     font-size: 32px;
@@ -31,29 +31,42 @@ video{
 
 }
 
+.contact-btns {
+    margin-top: 32px;
+
+}
+
+.contact-btns .btn{
+    margin: 6px;
+}
+
 .fa-play_circle {
     margin-left: 4px;
 }
 
 @media screen and (max-width: 960px) {
-    .hero-container > h1 {
+    .contact-container > h1 {
         font-size: 70px;
         margin-top: -150px;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .hero-container > h1 {
+    .contact-container > h1 {
         font-size: 50px;
         margin-top: -100px;
     }
 
-    .hero-container > p {
+    .contact-container > p {
         font-size: 30px;
     }
 
     .btn-mobile{
      display: block;
      text-decoration: none;
+    }
+
+    .btn{
+        width: 100%;
     }
 }
