--- a/src/components/MyResume.css
+++ b/src/components/MyResume.css
@@ -6,7 +6,7 @@ video{
     z-index: -1;
 }
 
-.hero-container{
+.myresume-container{
     height: 100vh;
     width: 100%;
     display: flex;
@@ -17,13 +17,13 @@ video{
     object-fit: contain;
 }
 
-.hero-container > h1 {
+.myresume-container > h1 {
     color: white;
     font-size: 100px;
     margin-top: -100px;
 }
 
-.hero-container >p {
+.myresume-container >p {
     margin-top: 8px;
     color: white;
     font-size: 32px;
@@ -31,29 +31,56 @@ video{
 
 }
 
+.myresume-container >p >a{
+    margin-top: 8px;
+    color: white;
+    font-size: 32px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.myresume-container >a{
+    margin-top: 8px;
+    color: white;
+    font-size: 32px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.myresume-btns {
+    margin-top: 32px;
+
+}
+
+.myresume-btns .btn{
+    margin: 6px;
+}
+
 .fa-play_circle {
     margin-left: 4px;
 }
 
 @media screen and (max-width: 960px) {
-    .hero-container > h1 {
+    .myresume-container > h1 {
         font-size: 70px;
         margin-top: -150px;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .hero-container > h1 {
+    .myresume-container > h1 {
         font-size: 50px;
         margin-top: -100px;
     }
 
-    .hero-container > p {
+    .myresume-container > p {
         font-size: 30px;
     }
 
     .btn-mobile{
      display: block;
      text-decoration: none;
+    }
+
+    .btn{
+        width: 100%;
     }
 }
