--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,6 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);  if no video for bg*/
+    background: transparent; 
     height: 80px;
     display: flex;
     justify-content: center;
@@ -7,9 +8,13 @@
     font-size: 1.2rem;
     position: sticky;
     top: 0;
-    z-index: 999;
+    z-index: 9999;
   }
   
+  .navbar.active {
+    background: linear-gradient(90deg, rgb(2, 108, 194), rgb(36, 0, 194) 100%);
+  }
+
   .navbar-container {
     display: flex;
     justify-content: center;
